--- a/docs/professor/cesar_gomes_de_freitas.mdx
+++ b/docs/professor/cesar_gomes_de_freitas.mdx
@@ -8,24 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Gestão da Produção",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "ELE2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "Metodologia Científica e Técnicas de Apresentação de Trabalhos",
           size: 2,
           teachers: [
@@ -34,6 +16,59 @@ export const data = {
           classroom: "Sala 6-2",
           students: [
             "AGR2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Logística aplicada à indústria de alimentos",
+          size: 1,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Logística aplicada à indústria de alimentos",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Gestão da Produção",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2023"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -49,42 +84,6 @@ export const data = {
             "ELE2023"
           ],
           time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Logística aplicada à indústria de alimentos",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Logística aplicada à indústria de alimentos",
-          size: 1,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2023"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
