--- a/docs/professor/haroldo_yutaka_misunaga.mdx
+++ b/docs/professor/haroldo_yutaka_misunaga.mdx
@@ -6,21 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão da qualidade",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -44,14 +30,14 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Análise Econômica de Mercado",
+          subject: "Gestão da qualidade",
           size: 2,
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
-            "TGC2024"
+            "TGC2023"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -61,6 +47,19 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Análise Econômica de Mercado",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
         {
           subject: "Plano de Negócio",
           size: 2,
