--- a/docs/professor/marcos_rogerio_oliveira.mdx
+++ b/docs/professor/marcos_rogerio_oliveira.mdx
@@ -8,7 +8,20 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia de Produtos de Origem Vegetal",
+          subject: "Gestão da Sustentabilidade",
+          size: 2,
+          teachers: [
+            "Marcos Rogério Oliveira"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologias de Produtos de Origem Animal",
           size: 2,
           teachers: [
             "Marcos Rogério Oliveira"
@@ -42,27 +55,13 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão da Sustentabilidade",
-          size: 2,
-          teachers: [
-            "Marcos Rogério Oliveira"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Tecnologias de Produtos de Origem Animal",
+          subject: "Tecnologia de Produtos de Origem Vegetal",
           size: 2,
           teachers: [
             "Marcos Rogério Oliveira"
@@ -71,7 +70,7 @@ export const data = {
           students: [
             "AGR2023"
           ],
-          time: "19:00 - 19:50",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
