--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -6,32 +6,6 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Topografia e Geoprocessamento",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGR2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Irrigação e Drenagem",
@@ -43,10 +17,35 @@ export const data = {
           students: [
             "AGR2023"
           ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Topografia e Geoprocessamento",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "AGR2024"
+          ],
           time: "21:00 - 21:50",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
