--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -11,6 +11,37 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Programação Orientada a Objetos",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Topografia e Geoprocessamento",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "AGR2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
           subject: "Projetos Elétricos Residenciais e Prediais",
           size: 4,
           teachers: [
@@ -26,41 +57,14 @@ export const data = {
       ]
     },
     {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Linguagem de Programação",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Programação Orientada a Objetos",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação",
+          subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -83,37 +87,6 @@ export const data = {
             "ELM2024"
           ],
           time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Programação Orientada a Objetos",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Trabalho de Conclusão de Curso",
-          size: 1,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "21:50 - 22:40",
           color: ""
         }
       ]
