--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -11,10 +11,72 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Gestão da Sustentabilidade",
+          size: 2,
+          teachers: [
+            "Marcos Rogério Oliveira"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Linguagem de Programação",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Linguagem de Programação",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
           subject: "Administração financeira e orçamentária",
           size: 2,
           teachers: [
             "Lechan Colares Santos"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Design de loja, visual merchandising e franchising",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
@@ -39,11 +101,7 @@ export const data = {
       ]
     },
     {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Elaboração de Projetos",
@@ -59,41 +117,23 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão da Sustentabilidade",
-          size: 2,
+          subject: "Trabalho de Conclusão de Curso",
+          size: 1,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Douglas Barbosa Sousa"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "TGC2023"
+            "TADS_ESP"
           ],
           time: "21:00 - 21:50",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Design de loja, visual merchandising e franchising",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
