--- a/docs/sala/bloco_2/sala_14-2.mdx
+++ b/docs/sala/bloco_2/sala_14-2.mdx
@@ -9,7 +9,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Logistica Aplicada",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "TGC2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -26,19 +40,6 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        },
-        {
-          subject: "Planejamento e Gestão Estratégica",
-          size: 2,
-          teachers: [
-            "Alexandre José Schumacher"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
         }
       ]
     },
@@ -49,19 +50,6 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Logistica Aplicada",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "TGC2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
         {
           subject: "Plano de Negócio",
           size: 2,
@@ -91,6 +79,19 @@ export const data = {
             "TGC2023"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Planejamento e Gestão Estratégica",
+          size: 2,
+          teachers: [
+            "Alexandre José Schumacher"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "TGC2023"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
