--- a/docs/turma/agr/agr2024.mdx
+++ b/docs/turma/agr/agr2024.mdx
@@ -11,24 +11,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Culturas I",
-          size: 4,
-          teachers: [
-            "Sônia Maria Mandotti"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "Metodologia Científica e Técnicas de Apresentação de Trabalhos",
           size: 2,
           teachers: [
@@ -47,11 +29,29 @@ export const data = {
           teachers: [
             "Octavio Henrique Viana"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "AGR2024"
           ],
           time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Culturas I",
+          size: 4,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGR2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
