--- a/docs/professor/alex_miyamoto_mussi.mdx
+++ b/docs/professor/alex_miyamoto_mussi.mdx
@@ -6,6 +6,10 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Projetos Elétricos Residenciais e Prediais",
@@ -23,11 +27,11 @@ export const data = {
       ]
     },
     {
-      dayName: "Terça-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: []
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Segurança do Trabalho",
@@ -42,7 +46,12 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Projeto Integrador",
           size: 2,
@@ -53,18 +62,10 @@ export const data = {
           students: [
             "AGR2023"
           ],
-          time: "21:00 - 21:50",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: []
     }
   ],
   time: [
