--- a/docs/professor/alexandre_jose_schumacher.mdx
+++ b/docs/professor/alexandre_jose_schumacher.mdx
@@ -10,28 +10,10 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Planejamento e Gestão Estratégica",
-          size: 2,
-          teachers: [
-            "Alexandre José Schumacher"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
       dayClasses: []
     },
     {
-      dayName: "Quinta-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Empreendedorismo",
@@ -43,10 +25,14 @@ export const data = {
           students: [
             "TGC2024"
           ],
-          time: "19:00 - 19:50",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -62,6 +48,19 @@ export const data = {
             "TGC2023"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Planejamento e Gestão Estratégica",
+          size: 2,
+          teachers: [
+            "Alexandre José Schumacher"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "TGC2023"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
