--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -6,13 +6,9 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação",
+          subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -25,12 +21,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Programação Orientada a Objetos",
+          subject: "Linguagem de Programação",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TADS_ESP"
           ],
@@ -40,7 +36,7 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Linguagem de Programação",
@@ -48,7 +44,7 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TADS_ESP"
           ],
@@ -56,6 +52,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -79,11 +79,11 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TADS_ESP"
           ],
-          time: "21:50 - 22:40",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
