--- a/docs/turma/tads/tads_esp.mdx
+++ b/docs/turma/tads/tads_esp.mdx
@@ -9,13 +9,9 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação",
+          subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -28,12 +24,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Programação Orientada a Objetos",
+          subject: "Linguagem de Programação",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TADS_ESP"
           ],
@@ -43,7 +39,7 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Linguagem de Programação",
@@ -51,7 +47,7 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TADS_ESP"
           ],
@@ -59,6 +55,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -82,11 +82,11 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TADS_ESP"
           ],
-          time: "21:50 - 22:40",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
