--- a/docs/professor/cesar_gomes_de_freitas.mdx
+++ b/docs/professor/cesar_gomes_de_freitas.mdx
@@ -13,7 +13,7 @@ export const data = {
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGR2024"
           ],
@@ -21,14 +21,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Logística aplicada à indústria de alimentos",
-          size: 1,
+          subject: "Gestão da Produção",
+          size: 2,
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 15-2",
+          classroom: "Sala 11-2",
           students: [
-            "TAL2023"
+            "ELE2023"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -50,6 +50,19 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
+        },
+        {
+          subject: "Logística aplicada à indústria de alimentos",
+          size: 1,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -60,19 +73,6 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Gestão da Produção",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "ELE2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
         {
           subject: "Conservação de Recursos Naturais (PPC2020)",
           size: 2,
