--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -8,19 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Irrigação e Drenagem",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Sala 2-2",
-          students: [
-            "AGR2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
           subject: "Topografia e Geoprocessamento",
           size: 2,
           teachers: [
@@ -41,7 +28,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Irrigação e Drenagem",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Sala 2-2",
+          students: [
+            "AGR2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
