--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -11,7 +11,7 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Programação Orientada a Objetos",
+          subject: "Linguagem de Programação",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -42,6 +42,24 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Programação Orientada a Objetos",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
           subject: "Projetos Elétricos Residenciais e Prediais",
           size: 4,
           teachers: [
@@ -57,15 +75,11 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Programação Orientada a Objetos",
-          size: 2,
+          subject: "Trabalho de Conclusão de Curso",
+          size: 1,
           teachers: [
             "Douglas Barbosa Sousa"
           ],
@@ -73,7 +87,7 @@ export const data = {
           students: [
             "TADS_ESP"
           ],
-          time: "19:00 - 19:50",
+          time: "19:50 - 20:40",
           color: ""
         },
         {
