--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -11,14 +11,14 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Gestão da Sustentabilidade",
+          subject: "Metodologia Científica e Técnicas de Apresentação de Trabalhos",
           size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Cesar Gomes de Freitas"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "TGC2023"
+            "AGR2024"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -42,7 +42,7 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação",
+          subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -55,10 +55,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Administração financeira e orçamentária",
+          subject: "Gestão da qualidade",
           size: 2,
           teachers: [
-            "Lechan Colares Santos"
+            "Haroldo Yutaka Misunaga"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
@@ -84,19 +84,6 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        },
-        {
-          subject: "Gestão da qualidade",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
         }
       ]
     },
@@ -117,14 +104,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Trabalho de Conclusão de Curso",
-          size: 1,
+          subject: "Administração financeira e orçamentária",
+          size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Lechan Colares Santos"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "TADS_ESP"
+            "TGC2023"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -133,7 +120,34 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projeto Integrador",
+          size: 2,
+          teachers: [
+            "Alex Miyamoto Mussi"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "AGR2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Gestão da Sustentabilidade",
+          size: 2,
+          teachers: [
+            "Marcos Rogério Oliveira"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
