--- a/docs/sala/bloco_2/sala_6-2.mdx
+++ b/docs/sala/bloco_2/sala_6-2.mdx
@@ -9,21 +9,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Metodologia Científica e Técnicas de Apresentação de Trabalhos",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -47,10 +33,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fertilidade, Manejo e Conservação dos Solos",
+          subject: "Forragicultura e Pastagens",
           size: 4,
           teachers: [
-            "Elias Franco"
+            "Marcos Rogério Oliveira"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -83,10 +69,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Forragicultura e Pastagens",
+          subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 4,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Elias Franco"
           ],
           classroom: "Sala 6-2",
           students: [
