--- a/docs/turma/agr/agr2023.mdx
+++ b/docs/turma/agr/agr2023.mdx
@@ -11,10 +11,28 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Irrigação e Drenagem",
+          subject: "Bovinocultura de Leite",
+          size: 4,
+          teachers: [
+            "Marcos Rogério Oliveira"
+          ],
+          classroom: "Sala 2-2",
+          students: [
+            "AGR2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Tecnologia de Produtos de Origem Vegetal",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Marcos Rogério Oliveira"
           ],
           classroom: "Sala 2-2",
           students: [
@@ -39,31 +57,13 @@ export const data = {
       ]
     },
     {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Bovinocultura de Leite",
-          size: 4,
-          teachers: [
-            "Marcos Rogério Oliveira"
-          ],
-          classroom: "Sala 2-2",
-          students: [
-            "AGR2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Ovinocaprinocultura",
+          subject: "Irrigação e Drenagem",
           size: 2,
           teachers: [
-            "Roberto Haruyoshi Ito"
+            "Octavio Henrique Viana"
           ],
           classroom: "Sala 2-2",
           students: [
@@ -73,10 +73,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Culturas III",
+          subject: "Ovinocaprinocultura",
           size: 2,
           teachers: [
-            "Sônia Maria Mandotti"
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 2-2",
           students: [
@@ -91,10 +91,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Extensão e Comunicação Rural",
+          subject: "Culturas III",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Sônia Maria Mandotti"
           ],
           classroom: "Sala 2-2",
           students: [
@@ -104,10 +104,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Tecnologia de Produtos de Origem Vegetal",
+          subject: "Extensão e Comunicação Rural",
           size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Elias Franco"
           ],
           classroom: "Sala 2-2",
           students: [
@@ -127,7 +127,7 @@ export const data = {
           teachers: [
             "Alex Miyamoto Mussi"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGR2023"
           ],
