--- a/docs/turma/agr/agr2024.mdx
+++ b/docs/turma/agr/agr2024.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGR2024"
           ],
@@ -60,10 +60,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fertilidade, Manejo e Conservação dos Solos",
+          subject: "Forragicultura e Pastagens",
           size: 4,
           teachers: [
-            "Elias Franco"
+            "Marcos Rogério Oliveira"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -96,10 +96,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Forragicultura e Pastagens",
+          subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 4,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Elias Franco"
           ],
           classroom: "Sala 6-2",
           students: [
