--- a/docs/professor/alex_miyamoto_mussi.mdx
+++ b/docs/professor/alex_miyamoto_mussi.mdx
@@ -10,6 +10,10 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Projetos Elétricos Residenciais e Prediais",
@@ -25,10 +29,6 @@ export const data = {
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -58,7 +58,7 @@ export const data = {
           teachers: [
             "Alex Miyamoto Mussi"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGR2023"
           ],
