--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -8,7 +8,7 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Programação Orientada a Objetos",
+          subject: "Linguagem de Programação",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -39,7 +39,7 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação",
+          subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -49,6 +49,19 @@ export const data = {
             "TADS_ESP"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Programação Orientada a Objetos",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -61,8 +74,8 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Programação Orientada a Objetos",
-          size: 2,
+          subject: "Trabalho de Conclusão de Curso",
+          size: 1,
           teachers: [
             "Douglas Barbosa Sousa"
           ],
@@ -70,20 +83,7 @@ export const data = {
           students: [
             "TADS_ESP"
           ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Trabalho de Conclusão de Curso",
-          size: 1,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "21:00 - 21:50",
+          time: "19:50 - 20:40",
           color: ""
         }
       ]
